[package]
name = "pkdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.6"
log = "0.4.22"
pcap = "2.2.0"
pcap-parser = "0.16.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
